--- a/style.css
+++ b/style.css
@@ -79,9 +79,9 @@ header h2{
 }
 
 .cd-thumb{
-    height: 480px;
-    /* width: 100%;
-    padding-top: 100%; */
+    /* height: 480px; */
+    width: 100%;
+    padding-top: 100%;
     border-radius: 50%;
     background-color: #333;
     background-size: cover;
@@ -114,6 +114,10 @@ header h2{
     background-color: var(--primary-color);
 }
 
+.control .btn.active{
+    color: var(--primary-color);
+}
+
 /* Progress */
 .progress{
     width: 100%;
@@ -144,5 +148,52 @@ header h2{
 .song{
     display: flex;
     align-items: center;
-    
+    margin-bottom: 12px;
+    background-color: #fff;
+    padding: 8px 16px;
+    border-radius: 5px;
+    box-shadow: o 2px 3px rgba(0, 0, 0, 0);
+}
+
+.song .thumb{
+    height: 44px;
+    width: 44px;
+    border-radius: 50%;
+    background-size: cover;
+    margin: 0 8px;
+}
+
+.song .body{
+    flex: 1;
+    padding: 0 16px;
+}
+
+.song.title{
+    font-size: 18px;
+    color: var(--primary-color);
+}
+
+.song .author{
+    font-size: 12px;
+    color: #999;
+}
+
+.song .option{
+    /* padding: 8px 16px; */
+    font-size: 18px;
+    color: #999;
+}
+
+.song.active{
+    background-color: var(--primary-color);
+}
+
+.song:active{
+    opacity: 0.8;
+}
+
+.song.active .option,
+.song.active .author,
+.song.active .title{
+    color: #fff;
 }
