--- a/style.css
+++ b/style.css
@@ -79,7 +79,6 @@ header h2{
 }
 
 .cd-thumb{
-    /* height: 480px; */
     width: 100%;
     padding-top: 100%;
     border-radius: 50%;
@@ -130,7 +129,7 @@ header h2{
 }
 
 .progress::-webkit-slider-thumb{
-    /* -webkit-appearance: none; */
+    -webkit-appearance: none;
     appearance: none;
     width: 12px;
     height: 6px;
@@ -141,7 +140,7 @@ header h2{
 /* Playlist */
 
 .playlist{
-    margin-top: 808px;
+    margin-top: 460px;
     padding: 12px;
 }
 
@@ -153,6 +152,7 @@ header h2{
     padding: 8px 16px;
     border-radius: 5px;
     box-shadow: o 2px 3px rgba(0, 0, 0, 0);
+    width: 100%;
 }
 
 .song .thumb{
@@ -179,7 +179,7 @@ header h2{
 }
 
 .song .option{
-    /* padding: 8px 16px; */
+    padding: 8px 16px;
     font-size: 18px;
     color: #999;
 }
